--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Use Bookmarklet Generator
+name: Test Bookmarklet Generator
 
 on:
   push:
@@ -8,11 +8,14 @@ on:
       - 'raw.js'
 
 jobs:
-  generate-bookmarklet:
+  bookmarklet-job:
     runs-on: ubuntu-latest
-    
+
     steps:
-      - name: Use Bookmarklet Generator
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Use Bookmarklet Generator Action
         uses: ulrischa/js_to_bookmarklet_action@v1
         with:
           source_js_file: 'raw.js'
@@ -20,3 +23,9 @@ jobs:
           target_element_id: 'target'
           commit_message: 'Update bookmarklet link'
 
+      - name: Debug Files and Environment
+        run: |
+          ls -la .
+          cat raw.js
+          cat index.htm
+        shell: bash
